--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,12 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'io.github.jzdayz.undertow.Server'
+        attributes 'Main-Class': 'io.github.jzdayz.netty.HttpStaticFileServer'
     }
 }
 
 group = 'io.github.jzdayz'
-version = '1.1'
+version = '2.0'
 sourceCompatibility = '1.8'
 
 publishing {
