--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'javax.activation:activation:1.1.1'
     implementation 'io.netty:netty-all:4.1.44.Final'
     implementation 'org.freemarker:freemarker:2.3.29'
     implementation 'io.undertow:undertow-core:2.0.28.Final'
