--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ repositories {
 dependencies {
     implementation 'javax.activation:activation:1.1.1'
     implementation 'io.netty:netty-all:4.1.44.Final'
-    implementation 'org.projectlombok:lombok:1.18.10'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
     implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
     implementation 'org.slf4j:slf4j-simple:2.0.0-alpha1'
     implementation 'org.freemarker:freemarker:2.3.29'
